# genomics-rs

./: .gitignore  Cargo.toml  README.md  bwt.txt  config.toml  output.txt  rust-toolchain.toml
alphabets/: banana.txt  dna.txt  english.txt
src/: alignment.rs  config.rs  fasta.rs  lib.rs  main.rs  sequence.rs
src/alignment/: algo.rs  display.rs  mod.rs
src/comparison/: display.rs
src/suffixtree/: display.rs  mod.rs  tree.rs
test_data/: long_simple.fasta  repeat.fasta  s3.fasta  s4.fasta  simple.fasta  test1.fasta  test2_short.fasta  test3_short.fasta  test4.fasta  test5.fasta
tests/: test_alignment.rs  test_suffixtree.rs
