[package]
name = "genomics_rs"
version = "0.1.0"
edition = "2021"

[dependencies]
bytemuck = "1.21.0"
colored = "3.0.0"
log = "0.4.25"
ndarray = "0.16.1"
num = "0.4.3"
pretty_env_logger = "0.5.0"
serde = "1.0.217"
serde_derive = "1.0.217"
spinoff = "0.8.0"
toml = "0.8.19"

[lib]
name = "genomics_rs"
path = "src/lib.rs"

[profile.dev]
opt-level = 0
debug = true

[profile.release]
opt-level = 3
codegen-units = 1
lto = false
debug = true
